ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/CnP_PaaS__CnPBatchUpload__c.object-meta.xml
<CustomObject>
    <label>C&amp;P  Batch Upload</label>
    <nameField>
        <displayFormat>Batch ID-{0000}</displayFormat>
        <label>Batch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P  Batch Upload</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>