ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/fields/CnP_PaaS__CnPAID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnPAID__c</fullName>
    <label>CnPAID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>