ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/fields/CnP_PaaS__Errors__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Errors__c</fullName>
    <label>Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>