ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/fields/CnP_PaaS__FileContent__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__FileContent__c</fullName>
    <label>FileContent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>