ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/fields/CnP_PaaS__FileHeader__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__FileHeader__c</fullName>
    <label>FileHeader</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>