ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/fields/CnP_PaaS__FileName__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__FileName__c</fullName>
    <label>File Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>