ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/fields/CnP_PaaS__ProcessingDate__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__ProcessingDate__c</fullName>
    <label>Processed Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>