ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/fields/CnP_PaaS__Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Type__c</fullName>
    <description>0=CSV batch entry,1=Report batch entry</description>
    <label>Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>