ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/fields/CnP_PaaS__Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Upload_Status__c</fullName>
    <label>Upload Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>