ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/fields/CnP_PaaS__Username__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Username__c</fullName>
    <label>Username</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>