ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/listViews/CnP_PaaS__All.listView-meta.xml
<ListView>
    <fullName>CnP_PaaS__All</fullName>
    <columns>NAME</columns>
    <columns>CnP_PaaS__FileName__c</columns>
    <columns>CnP_PaaS__CnPAID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>