ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPBatchUpload__c/listViews/CnP_PaaS__C_P_Batch_Upload.listView-meta.xml
<ListView>
    <fullName>CnP_PaaS__C_P_Batch_Upload</fullName>
    <columns>NAME</columns>
    <columns>CnP_PaaS__FileName__c</columns>
    <columns>CnP_PaaS__AuthorizeTransactions__c</columns>
    <columns>CnP_PaaS__DeclineTransactions__c</columns>
    <columns>CnP_PaaS__Errors__c</columns>
    <filterScope>Everything</filterScope>
    <label>C&amp;P Batch Upload</label>
</ListView>